# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.874 2009-04-17 12:53:16 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.0 beta1 (2009/??/??)
 - (2009/04/17) Added own SysConfig settings for bulk action (
    Ticket // Frontend::Agent::Ticket::ViewBulk).
 - (2009/04/15) Removed AgentCanBeCustomer option from agent frontend.
    Customer followup messages can only be created from the customer frontend.
 - (2009/04/09) Added search for article create times in ticket search.
 - (2009/04/09) Improved email send functionality to properly format emails
    with alternative parts and inline images.
 - (2009/04/09) Added enhancement bug# 3514 - RegExp support in ACLs. Now you
    can use RegExp in ACLs like the followin example:

    $Self->{TicketAcl}->{'ACL-Name-1'} = {
       # match properties
       Properties => {
           Queue => {
               Name => ['[RegExp]^Misc'],
           },
       },
       # return possible options (white list)
       Possible => {
           # possible ticket options (white list)
           Ticket => {
               Service  => ['[RegExp]^t1', '[RegExp]^t2'],
               Priority => [ '4 high' ],
           },
       },
    };

    Starting with "[RegExp]" in value area means the following will be a regexp
    content.

    This ACL will match all Queues with starting "Misc" and all services with
    starting "t1" and "t2". So you do not longer need to write every full queue
    names to the array list.

    o Usage of [RegExp] results in case-sensitive matching.
    o Usage of [regexp] results in case-insensitive matching.

 - (2009/04/08) Updated CPAN module CGI to version 3.43.
 - (2009/04/07) Changed default config size of IPC-Log (LogSystemCacheSize)