@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketCompose.pm - to compose and send a message
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketCompose.pm,v 1.65 2009-04-20 06:22:38 martin Exp $
+# $Id: AgentTicketCompose.pm,v 1.66 2009-04-20 06:48:51 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -24,7 +24,7 @@ use Kernel::System::TemplateGenerator;
 use Mail::Address;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.65 $) [1];
+$VERSION = qw($Revision: 1.66 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -828,25 +828,33 @@ sub Run {
             $Data{ToEmail} = $Email->address();
         }
 
-        # use database email
-        if ( $Customer{UserEmail} && $Data{ToEmail} !~ /^\Q$Customer{UserEmail}\E$/i ) {
-            if ( $Self->{ConfigObject}->Get('Ticket::Frontend::ComposeReplaceSenderAddress') ) {
-                $Self->{LayoutObject}->Block(
-                    Name => 'PropertiesRecipientTo',
-                    Data => { To => $Data{To} },
-                );
-                $Data{To} = $Customer{UserEmail};
-            }
-            else {
-                $Self->{LayoutObject}->Block(
-                    Name => 'PropertiesRecipientCc',
-                    Data => { Cc => $Customer{UserEmail}, },
-                );
-                if ( $Data{Cc} ) {
-                    $Data{Cc} .= ', ' . $Customer{UserEmail};
+        # use customer database email
+        if ( $Self->{ConfigObject}->Get('Ticket::Frontend::ComposeAddCustomerAddress') ) {
+
+            # check if customer is in recipient list
+            if ( $Customer{UserEmail} && $Data{ToEmail} !~ /^\Q$Customer{UserEmail}\E$/i ) {
+
+                # replace To with customers database address
+                if ( $Self->{ConfigObject}->Get('Ticket::Frontend::ComposeReplaceSenderAddress') ) {
+                    $Self->{LayoutObject}->Block(
+                        Name => 'PropertiesRecipientTo',
+                        Data => { To => $Data{To} },
+                    );
+                    $Data{To} = $Customer{UserEmail};
                 }
+
+                # add customers database address to Cc
                 else {
-                    $Data{Cc} = $Customer{UserEmail};
+                    $Self->{LayoutObject}->Block(
+                        Name => 'PropertiesRecipientCc',
+                        Data => { Cc => $Customer{UserEmail}, },
+                    );
+                    if ( $Data{Cc} ) {
+                        $Data{Cc} .= ', ' . $Customer{UserEmail};
+                    }
+                    else {
+                        $Data{Cc} = $Customer{UserEmail};
+                    }
                 }
             }
         }
