@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.874 2009-04-17 12:53:16 martin Exp $
+# $Id: CHANGES,v 1.875 2009-04-20 06:48:51 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,9 @@
 # --
 
 2.4.0 beta1 (2009/??/??)
+ - (2009/04/18) Added SysConfig setting to (not) include custmers email address
+    on composing an answer "Ticket::Frontend::ComposeAddCustomerAddress".
+    Default is set to true.
  - (2009/04/17) Added own SysConfig settings for bulk action (
     Ticket // Frontend::Agent::Ticket::ViewBulk).
  - (2009/04/15) Removed AgentCanBeCustomer option from agent frontend.
